--- a/src/StagePage.css
+++ b/src/StagePage.css
@@ -97,3 +97,25 @@ body {
   align-items: center;
   width: 100%;
 }
+
+
+button {
+  margin-top: 10px;
+  padding: 10px 20px;
+  background-color: #A6E3E9;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #89c2d9;
+}
+
+.scoreContainer {
+  display: flex;
+  align-items: center;
+  gap: 40px; /* p 요소와 button 요소 사이의 간격 */
+}
