--- a/src/pages/StagePage/StagePage1.css
+++ b/src/pages/StagePage/StagePage1.css
@@ -108,7 +108,7 @@ body {
 }
 
 
-button1 {
+button-1 {
   margin-top: 10px;
   padding: 10px 20px;
   background-color: #A6E3E9;
@@ -119,7 +119,7 @@ button1 {
   transition: background-color 0.3s;
 }
 
-button:hover {
+button-1:hover {
   background-color: #89c2d9;
 }
 
