비밀번호 변경시 유효성 검증 추가, 비밀번호 변경시 현재 비밀번호 확인 삭제

--- a/src/pages/ChangePasswordPage/ChangePasswordPage.css
+++ b/src/pages/ChangePasswordPage/ChangePasswordPage.css
@@ -23,6 +23,12 @@ body {
   margin-bottom: 20px;
 }
 
+.password-fields div {
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+
+
 .changePasswordBtn,
 .backBtn {
   width: 130px;
